# ricochet

./: .cmake-format.yaml  .editorconfig  .gitignore  .gitmodules  .talismanrc  .travis.yml  AUTHORS.md  BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTE.md  ChatWidget.cpp  ChatWidget.h  LICENSE  LICENSE-GPLv2  MainWindow.cpp  MainWindow.h  README.md  README.old.md  README.txt  TorIM.pro  Torsion.pro  hardened.pri  main.cpp  protobuf.pri  ricochet.pro
src/: CMakeLists.txt  ContactsModel.cpp  ContactsModel.h  Info.plist  LICENSE  Torsion.desktop  logger.cpp  logger.hpp  main.cpp  main.h  ricochet-refresh.desktop  ricochet.desktop  ricochet.pro  tego.pro
src/cmake/: compiler_opts.cmake  lto.cmake  qmake_static.cmake
src/cmake/toolchains/: README  i386-linux-gnu.cmake  i386-w64-mingw32.cmake  x86_64-apple-darwin.cmake  x86_64-w64-mingw32.cmake
src/core/: ContactIDValidator.cpp  ContactIDValidator.h  ContactUser.cpp  ContactUser.h  ContactsManager.cpp  ContactsManager.h  ConversationModel.cpp  ConversationModel.h  IdentityManager.cpp  IdentityManager.h  IncomingRequestManager.cpp  IncomingRequestManager.h  NicknameValidator.cpp  NicknameValidator.h  OutgoingContactRequest.cpp  OutgoingContactRequest.h  OutgoingRequestManager.cpp  OutgoingRequestManager.h  OutgoingcontactRequest.cpp  TorControlManager.h  TorControlSocket.h  UserIdentity.cpp  UserIdentity.h
src/libtego/: CMakeLists.txt  libtego.pri  libtego.pro
src/libtego/include/: libgtego.h
src/libtego/source/: context.cpp  context.hpp  delete.cpp  ed25519.cpp  ed25519.hpp  error.cpp  error.hpp  file_hash.cpp  file_hash.hpp  globals.cpp  globals.hpp  libtego.cpp  libtego.hpp  logger.cpp  orconfig.h  precomp.h  signals.cpp  signals.hpp  tor.cpp  tor.hpp  tor_stubs.cpp  user.cpp  user.hpp  utilities.hpp
src/libtego/test/: CMakeLists.txt  test_init.cpp
src/libtego_ui/: CMakeLists.txt  libtego_callbacks.cpp  libtego_callbacks.hpp  libtego_ui.pri  libtego_ui.pro  precomp.hpp
src/libtego_ui/core/: ContactIDValidator.cpp  ContactUser.h  ConversationModel.h  IdentityManager.cpp  IdentityManager.h  UserIdentity.cpp  UserIdentity.h
src/libtego_ui/protocol/: AuthHiddenService.proto  AuthHiddenServiceChannel.cpp  ChatChannel.cpp  ChatChannel.h  ChatChannel.proto  Connection.cpp  ControlChannel.h  ControlChannel.proto  OutboundConnector.cpp
src/libtego_ui/shims/: ContactIDValidator.cpp  ContactIDValidator.h  ContactManager.cpp  ContactManager.h  ContactUser.cpp  ContactUser.h  ContactsManager.cpp  ContactsManager.h  ConversationModel.cpp  ConversationModel.h  IncomingContactRequest.cpp  IncomingContactRequest.h  IncomingRequestManager.cpp  IncomingRequestManager.h  OutgoingContactRequest.cpp  OutgoingContactRequest.h  TorCommand.cpp  TorCommand.h  TorControl.cpp  TorControl.h  TorManager.cpp  TorManager.h  UserIdentity.cpp  UserIdentity.h
src/libtego_ui/tor/: AddOnionCommand.cpp  AuthenticateCommand.cpp  HiddenService.cpp  HiddenService.h  ProtocolInfoCommand.cpp  SetConfCommand.h  TorControl.cpp
src/libtego_ui/ui/: Clipboard.cpp  Clipboard.h  ContactsModel.cpp  ContactsModel.h  LanguagesModel.h  MainWindow.cpp  MainWindow.h
src/libtego_ui/utils/: CryptoKey.cpp  CryptoKey.h  (+5 more)
src/protocol/: AuthHiddenService.proto  AuthHiddenServiceChannel.cpp  AuthHiddenServiceChannel.h  Channel.cpp  Channel.h  Channel_p.h  ChatChannel.cpp  ChatMessageCommand.cpp  ChatMessageCommand.h  CommandDataParser.cpp  CommandDataParser.h  CommandHandler.cpp  CommandHandler.h  Connection.cpp  Connection.h  Connection_p.h  ContactRequestChannel.cpp  ContactRequestChannel.h  ContactRequestChannel.proto  ContactRequestClient.cpp  ContactRequestClient.h  ContactRequestServer.cpp  ContactRequestServer.h  ControlChannel.cpp  ControlChannel.h  ControlChannel.proto  DispatchCommand.cpp  GetSecretCommand.cpp  GetSecretCommand.h  IncomingSocket.cpp  IncomingSocket.h  OutboundConnector.cpp  OutboundConnector.h  OutgoingContactSocket.cpp  OutgoingContactSocket.h  PingCommand.cpp  PingCommand.h  ProtocolCommand.cpp  ProtocolCommand.h  ProtocolConstants.h  (+4 more)
src/qmake_includes/: artifacts.pri  compiler_flags.pri  hardened.pri  linker_flags.pri  openssl.pri  protobuf.pri
src/ricochet-refresh/: CMakeLists.txt  main.cpp  precomp.hpp  tego_ui.pro
src/tego-ui/: Info.plist  logger.hpp  main.cpp  precomp.h  tego-ui.pro
src/tego_ui/: main.cpp  precomp.hpp  tego_ui.pro
src/tests/: app_common.pri  tests.pri  tests.pro
src/tor/: AddOnionCommand.cpp  AuthenticateCommand.cpp  AuthenticateCommand.h  GetConfCommand.cpp  GetConfCommand.h  HiddenService.cpp  HiddenService.h  ProtocolInfoCommand.cpp  ProtocolInfoCommand.h  SetConfCommand.cpp  SetConfCommand.h  TorControl.cpp  TorControl.h  TorControlCommand.cpp  TorControlCommand.h  TorControlManager.cpp  TorControlManager.h  TorControlSocket.cpp  TorControlSocket.h  TorManager.cpp  TorManager.h  TorProcess.cpp  TorProcess.h  TorProcess_p.h  TorServiceTest.cpp  TorServiceTest.h  TorSocket.cpp  TorSocket.h
src/ui/: AudioNotification.cpp  AudioNotification.h  AvatarImageProvider.cpp  AvatarImageProvider.h  ChatTextInput.cpp  ChatTextInput.h  ChatTextWidget.cpp  ChatTextWidget.h  ChatWidget.cpp  ChatWidget.h  ContactAddDialog.cpp  ContactAddDialog.h  ContactIDWidget.cpp  ContactIDWidget.h  ContactInfoPage.cpp  ContactInfoPage.h  ContactItemDelegate.cpp  ContactItemDelegate.h  ContactRequestDialog.cpp  ContactRequestDialog.h  ContactsModel.cpp  ContactsModel.h  ContactsView.cpp  ContactsView.h  ContactsViewDelegate.cpp  ContactsViewDelegate.h  ConversationModel.cpp  ConversationModel.h  EditableLabel.cpp  EditableLabel.h  ExpandingTextEdit.cpp  ExpandingTextEdit.h  FancyTextEdit.cpp  FancyTextEdit.h  HomeContactWidget.cpp  HomeContactWidget.h  HomeScreen.cpp  HomeScreen.h  IdentityInfoPage.cpp  IdentityInfoPage.h  (+21 more)
src/utils/: AppSettings.cpp  AppSettings.h  AudioPlayer.cpp  AudioPlayer.h  CryptoKey.cpp  CryptoKey.h  DateUtil.cpp  DateUtil.h  OSUtil.cpp  OSUtil.h  PaintUtil.cpp  PaintUtil.h  PendingOperation.cpp  PendingOperation.h  SecureRNG.cpp  SecureRNG.h  Settings.cpp  Settings.h  StringUtil.cpp  StringUtil.h  Useful.h
(+504 files in other folders)
